...
            ),
            FloatingActionButton.extended(
                backgroundColor: Colors.yellow,
                label: Text(
                  BasketSingleton().hasIDInBasket(listClockData.id)
                      ? "В корзине"
                      : "Положить в корзину",
                  style: TextStyle(color: Colors.teal[900]),
                ),
                icon: Icon(
                    BasketSingleton().hasIDInBasket(listClockData.id)
                        ? Icons.check_rounded
                        : Icons.add_shopping_cart_outlined,
...
